# aiva

./: .env.example  .gitignore  Makefile  README.md  aiva_config.yaml  direct_test_jp.py  package-lock.json  pyproject.toml  requirements.txt
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: style.css
frontend/src/components/: AppHeader.vue  AvatarUpload.vue  CharacterCard.vue  ChatPanel.vue  ControlBar.vue  CvSelect.vue  SetupBanner.vue  VideoPlayer.vue  (+1 more)
inference/: server.py
inference/core/: __init__.py  config.py  registry.py  types.py
inference/plugins/: base.py
inference/services/: asr_service.py  avatar_service.py  llm_service.py  tts_service.py  voice_llm_service.py
infra/: .env.example  Dockerfile.frontend  Dockerfile.inference  Dockerfile.server  docker-compose.yml  nginx.conf
models/SoulX-LiveAct/: README.md  demo.py  generate.py
models/flash_head/: README.md  generate_video.py  gradio_app.py  inference.py
proto/: asr.proto  avatar.proto  common.proto  llm.proto  tts.proto  voice_llm.proto
scripts/: Untitled  chain_connectivity_quick_test.py  gcp_install.sh  generate_proto.sh  inference.sh  inference_multi_gpu.sh  run_inference.sh  startup.sh  voice_chain_connectivity_quick.py  voice_chain_connectivity_silence_sim.py
server/: go.mod  go.sum
tests/: conftest.py
tests/integration/: __init__.py  test_flash_head_generates_real_video.py
tests/unit/: test_audio_rechunker.py  test_avatar_warmup.py  test_config.py  test_doubao_plugin.py  test_flash_head_plugin.py  test_grpc_services.py  test_inference_server.py  test_live_act_plugin.py  test_openai_plugins.py  test_plugin_discovery.py  test_registry.py  test_types.py  test_voice_llm_grpc_service.py  test_whisper_plugin.py
(+108 files in other folders)
